<resources>
    <string name="app_name">ContactsUdemyCourse</string>
    <string name="hint_username">please enter username</string>
    <string name="hint_password">please enter password</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="hint_un_one">enter username</string>
    <string name="hint_retype_password">please retype password</string>
    <string name="hint_email">enter email</string>
    <string name="hint_password_reset">enter your email address</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="logout">Logout</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_add_contact">Add New Contact</string>
    <string name="btn_edit_contact">Edit Contact</string>
    <string name="action_edit">Edit Contact</string>
    <string name="action_delete">Delete Contact</string>

</resources>
