<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.colinknecht.contactsudemycourse.EditContacts">

    <ImageView
        android:id="@+id/iv_call"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/call"/>

    <TextView
        android:id="@+id/tv_name_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="First Last"/>

    <TextView
        android:id="@+id/tv_phone_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        tools:text="123-456-7890"/>

    <EditText
        android:id="@+id/et_firstname_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/et_lastname_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/et_phone_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btn_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttons"
        android:text="@string/btn_edit_contact"/>

</LinearLayout>
